# Chip-8-Emulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
hardware/: ChipEight.cpp  ChipEight.h  Sound.cpp  Sound.h
tests/: CMakeLists.txt  test1.cpp
